tests/baselines/reference/parserMemberAccessorDeclaration13.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration13.ts(2,8): error TS1049: A 'set' accessor must have exactly one parameter.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration13.ts (1 errors) ====
    class C {
       set Foo() { }
           ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
    }